adjust initial zoom and rotation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </style>
   </head>
   <body>
+    <div id="zoom">Zoom/unzoom the scene</div>
+    <button id="reset">Reset view</button>
     <!-- <script type="module" src="/main.js"></script> -->
     <script type="module" src="/pointcloud.js"></script>
   </body>
