--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My first three.js app</title>
+    <title>3D Visualization of the Ducke Reserve</title>
     <style>
       body {
         margin: 0;
@@ -36,12 +36,18 @@
         top: calc(50% - 20px);
         left: calc(50% - 20px);
       }
+
+      .main {
+        
+      }
     </style>
   </head>
   <body>
     <!-- <script type="module" src="/main.js"></script> -->
-    <div class="container">
-      <div class="slider"></div>
+    <div class="main">
+      <div class="container">
+        <div class="slider"></div>
+      </div>
     </div>
     <script type="module" src="/pointcloud.js"></script>
   </body>
