fix resource link

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       </footer>
     </div>
 
-    <script type="module" src="/pointcloud.js"></script>
+    <script type="module" src="./pointcloud.js"></script>
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
