--- a/duckereserve.html
+++ b/duckereserve.html
@@ -113,13 +113,9 @@
         display: block !important;
       }
 
-      /* custom */
       .container {
         width: auto;
         height: 300px;
-
-        border-color: aliceblue;
-        border-width: 2px;
       }
 
       .slider {
@@ -138,6 +134,9 @@
 
       .loading-left {
         position: absolute;
+
+        color: red;
+        opacity: 0.7;
 
         top: 50%;
         left: 25%;
@@ -258,12 +257,14 @@
           </h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a
-              class="nav-link fw-bold py-1 px-0 active"
+              class="nav-link fw-bold py-1 px-0"
               aria-current="page"
               href="./index.html"
               >Aa River (DE)</a
             >
-            <a class="nav-link fw-bold py-1 px-0" href="./duckereserve.html"
+            <a
+              class="nav-link fw-bold py-1 px-0 active"
+              href="./duckereserve.html"
               >Ducke Reserve (BR)</a
             >
             <a class="nav-link fw-bold py-1 px-0" href="#">Contact</a>
@@ -272,7 +273,7 @@
       </header>
 
       <main class="px-3">
-        <h1>Explore the Aa River.</h1>
+        <h1>Explore the Ducke Reserve.</h1>
 
         <div class="container mx-auto mb-5 position-relative">
           <div
@@ -287,20 +288,8 @@
         </div>
 
         <p class="lead">
-          "The renaturalization of streams is a common strategy for improving
-          the ecological quality of water bodies as mandated by the European
-          Water Directive. For that reason, parts of the Aa stream in Münster
-          upstream until its flow into the Aa lake covering 2.6 km were
-          renaturalized from 2012 to 2013." (check
-          <a
-            href="https://una.city/nbs/munster/renaturalization-aa-stream-munster-area"
-            target="_blank"
-            >source</a
-          >)
-        </p>
-
-        <p class="lead">
-          This project compares the Aa River in 2018 and the Aa River in 2024.
+          This project compares the Ducke Reserve in 2017 and the Ducke Reserve
+          in 2021.
         </p>
         <p class="lead mt-5">
           <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white"
@@ -318,7 +307,7 @@
       </footer>
     </div>
 
-    <script type="module" src="./pointcloud.js"></script>
+    <script type="module" src="./ducke_pointcloud.js"></script>
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
