refactoring and change spinner symbol

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
 
         <div class="container mx-auto mb-5 position-relative">
           <div
-            class="spinner-grow text-primary loading-left"
+            class="spinner-border text-primary loading-left"
             role="status"
           ></div>
           <div
-            class="spinner-grow text-success loading-right"
+            class="spinner-border text-success loading-right"
             role="status"
           ></div>
           <div class="slider"></div>
